fixing database deploy

--- a/src/UI.Shared/Pages/WorkOrderManage.razor
+++ b/src/UI.Shared/Pages/WorkOrderManage.razor
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="RoomNumber" class="form-label">Room Number:</label>
+                    <label for="RoomNumber" class="form-label">Room:</label>
                     <div>
                         <InputText data-testid="@Elements.RoomNumber" id="RoomNumber" @bind-Value="Model.RoomNumber" class="form-control input-text" disabled="@Model.IsReadOnly" />
                     </div>
