--- a/src/UI.Shared/Components/HealthCheckLink.razor
+++ b/src/UI.Shared/Components/HealthCheckLink.razor
@@ -1,10 +1,12 @@
-<a data-testid="@HealthCheckLink.Elements.HealthCheckLink" href="/_clienthealthcheck" class="health-check-link" title="Health Check">
+<a data-testid="@Elements.HealthCheckLink" href="/_clienthealthcheck" class="health-check-link" title="Health Check">
     <i class="bi bi-gear-fill" aria-hidden="true"></i> Health Check
 </a>
 
 @code {
+
     public enum Elements
     {
         HealthCheckLink
     }
+
 }
