--- a/src/UI.Shared/Components/Logout.razor
+++ b/src/UI.Shared/Components/Logout.razor
@@ -8,7 +8,7 @@
     }
     @userIdentity!
 </span>
-<a data-testid="@Logout.Elements.LogoutLink" href="#" @onclick="HandleLogout" class="ms-3">Logout</a>
+<a data-testid="@Elements.LogoutLink" href="#" @onclick="HandleLogout" class="ms-3">Logout</a>
 
 @code {
 
