--- a/src/UI.Shared/Pages/WorkOrderManage.razor
+++ b/src/UI.Shared/Pages/WorkOrderManage.razor
@@ -76,7 +76,10 @@
 
             </div>
             
-            <WorkOrderChat/>
+            @if (_workOrder != null)
+            {
+                <WorkOrderChat/>
+            }
         </div>
 
         <div class="action-section">
