feat: acceptance tests

--- a/src/UI.Shared/Pages/WorkOrderSearch.razor
+++ b/src/UI.Shared/Pages/WorkOrderSearch.razor
@@ -116,7 +116,8 @@
         AssigneeSelect,
         StatusSelect,
         SearchButton,
-        WorkOrderLink
+        WorkOrderLink,
+        DeleteWorkOrderButton
     }
 
     public WorkOrderSearchModel Model { get; set; } = new();
