feat: fix stuff

--- a/src/UI.Shared/Pages/WorkOrderSearch.razor
+++ b/src/UI.Shared/Pages/WorkOrderSearch.razor
@@ -85,7 +85,10 @@
                         {
                             var rowClass = i++ % 2 == 0 ? "odd" : "even";
                             <tr class="@rowClass">
-                                    <td><button data-testid="deleteButtonTestId" type="button" class="btn btn-danger" style="display: @((order.Status == WorkOrderStatus.Draft && order.Id != Guid.Empty) ? "block" : "none");" @onclick="(() => DeleteItem(order.Number))">Delete</button></td>
+                                @{
+                                    var deleteButtontId = Elements.DeleteWorkOrderButton + order.Number;
+                                }
+                                    <td><button data-testid="@deleteButtontId" type="button" class="btn btn-danger" style="display: @((order.Status == WorkOrderStatus.Draft && order.Id != Guid.Empty) ? "block" : "none");" @onclick="(() => DeleteItem(order.Number))">Delete</button></td>
                                 <td>
                                     @{
                                         var workOrderLinkTestId = Elements.WorkOrderLink + order.Number;
