--- a/src/UI.Shared/Pages/WorkOrderManage.razor
+++ b/src/UI.Shared/Pages/WorkOrderManage.razor
@@ -56,6 +56,13 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="Instructions" class="form-label">Instructions:</label>
+                    <div>
+                        <InputTextArea data-testid="@Elements.Instructions" id="Instructions" @bind-Value="Model.Instructions" class="form-control input-textarea" disabled="@Model.IsReadOnly"/>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label for="RoomNumber" class="form-label">Room:</label>
                     <div>
                         <InputText data-testid="@Elements.RoomNumber" id="RoomNumber" @bind-Value="Model.RoomNumber" class="form-control input-text" disabled="@Model.IsReadOnly"/>
@@ -110,13 +117,14 @@
     public enum Elements
     {
         Assignee,
-        Title,
+    Title,
         AssigneeFullName,
         RoomNumber,
-        Description,
+     Description,
+        Instructions,
         AssignedDate,
         CompletedDate,
-        CreatedDate,
+   CreatedDate,
         AuditEntriesTable,
         ReadOnlyMessage,
         CommandButton,
