--- a/src/UI.Shared/Pages/WorkOrderManage.razor
+++ b/src/UI.Shared/Pages/WorkOrderManage.razor
@@ -53,7 +53,7 @@
                     <div>
                         <InputTextArea data-testid="@Elements.Description" id="Description" @bind-Value="Model.Description" class="form-control input-textarea" disabled="@Model.IsReadOnly"/>
                     </div>
-                </div>
+                </div>                <div class="form-group">`n                    <label for="Instructions" class="form-label">Instructions:</label>`n                    <div>`n                        <InputTextArea data-testid="@Elements.Instructions" id="Instructions" @bind-Value="Model.Instructions" class="form-control input-textarea" disabled="@Model.IsReadOnly"/>`n                    </div>`n                </div>`n`n
 
                 <div class="form-group">
                     <label for="RoomNumber" class="form-label">Room:</label>
@@ -113,8 +113,7 @@
         Title,
         AssigneeFullName,
         RoomNumber,
-        Description,
-        AssignedDate,
+        Description,`n        Instructions,`n        AssignedDate,
         CompletedDate,
         CreatedDate,
         AuditEntriesTable,
