--- a/src/UI.Shared/Components/WorkOrderChat.razor
+++ b/src/UI.Shared/Components/WorkOrderChat.razor
@@ -66,7 +66,7 @@
         var userMessage = _prompt.Trim();
         _chatMessages.Add(new ChatMessage { Content = userMessage, IsUser = true });
         _isLoading = true;
-        StateHasChanged();
+        await InvokeAsync(StateHasChanged);
         _prompt = "";
 
         try
@@ -84,7 +84,7 @@
         finally
         {
             _isLoading = false;
-            StateHasChanged();
+            await InvokeAsync(StateHasChanged);
         }
     }
 
